@@ -1,27 +1,30 @@
 package sgc.atividade;
 
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import lombok.extern.slf4j.Slf4j;
 import sgc.atividade.dto.AtividadeDto;
 import sgc.atividade.dto.AtividadeMapper;
-import sgc.atividade.modelo.AtividadeRepo;
-import sgc.comum.erros.ErroDominioAccessoNegado;
-import sgc.comum.erros.ErroDominioNaoEncontrado;
-import sgc.conhecimento.dto.ConhecimentoDto;
-import sgc.conhecimento.dto.ConhecimentoMapper;
-import sgc.conhecimento.modelo.ConhecimentoRepo;
-import sgc.sgrh.UsuarioRepo;
-import sgc.subprocesso.modelo.SubprocessoRepo;
+import sgc.atividade.dto.ConhecimentoDto;
+import sgc.atividade.dto.ConhecimentoMapper;
+import sgc.atividade.model.AtividadeRepo;
+import sgc.atividade.model.ConhecimentoRepo;
+import sgc.comum.erros.ErroAccessoNegado;
+import sgc.comum.erros.ErroEntidadeNaoEncontrada;
+import sgc.comum.erros.ErroSituacaoInvalida;
+import sgc.processo.model.TipoProcesso;
+import sgc.sgrh.model.UsuarioRepo;
+import sgc.subprocesso.model.SituacaoSubprocesso;
+import sgc.subprocesso.model.SubprocessoRepo;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+/** Serviço para gerenciar a lógica de negócios de Atividades e Conhecimentos. */
+@Slf4j
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class AtividadeService {
-
     private final AtividadeRepo atividadeRepo;
     private final AtividadeMapper atividadeMapper;
     private final ConhecimentoRepo conhecimentoRepo;
@@ -29,99 +32,254 @@ public class AtividadeService {
     private final SubprocessoRepo subprocessoRepo;
     private final UsuarioRepo usuarioRepo;
 
+    /**
+     * Retorna uma lista de todas as atividades.
+     *
+     * @return Uma {@link List} de {@link AtividadeDto}.
+     */
     public List<AtividadeDto> listar() {
-        return atividadeRepo.findAll()
-                .stream()
-                .map(atividadeMapper::toDTO)
-                .collect(Collectors.toList());
+        return atividadeRepo.findAll().stream().map(atividadeMapper::toDto).toList();
     }
 
-    public AtividadeDto obterPorId(Long idAtividade) {
-        return atividadeRepo.findById(idAtividade)
-                .map(atividadeMapper::toDTO)
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", idAtividade));
+    /**
+     * Busca uma atividade pelo seu código.
+     *
+     * @param codAtividade O código da atividade.
+     * @return O {@link AtividadeDto} correspondente.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
+     */
+    public AtividadeDto obterPorCodigo(Long codAtividade) {
+        return atividadeRepo
+                .findById(codAtividade)
+                .map(atividadeMapper::toDto)
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codAtividade));
     }
 
-    public AtividadeDto criar(AtividadeDto atividadeDto, String username) {
-        var subprocesso = subprocessoRepo.findByMapaCodigo(atividadeDto.mapaCodigo())
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Subprocesso não encontrado para o mapa com código %d".formatted(atividadeDto.mapaCodigo())));
-
-        var usuario = usuarioRepo.findByTituloEleitoral(Long.parseLong(username))
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Usuário", username));
-
-        if (!usuario.equals(subprocesso.getUnidade().getTitular())) {
-            throw new ErroDominioAccessoNegado("Usuário não autorizado a criar atividades para este subprocesso.");
+    /**
+     * Cria uma nova atividade, realizando validações de segurança e de estado do subprocesso.
+     *
+     * @param atividadeDto O DTO com os dados da nova atividade.
+     * @param tituloUsuario O título de eleitor do usuário que está criando a atividade.
+     * @return O {@link AtividadeDto} da atividade criada.
+     * @throws ErroEntidadeNaoEncontrada se o subprocesso ou o usuário não forem encontrados.
+     * @throws ErroAccessoNegado se o usuário não for o titular da unidade do subprocesso.
+     * @throws ErroSituacaoInvalida se o subprocesso já estiver finalizado.
+     */
+    public AtividadeDto criar(AtividadeDto atividadeDto, String tituloUsuario) {
+        if (atividadeDto.getMapaCodigo() == null) {
+            throw new ErroEntidadeNaoEncontrada("Mapa", "não informado");
         }
-        if (subprocesso.getSituacao().isFinalizado()) {
-            throw new IllegalStateException("Subprocesso já está finalizado.");
+
+        var subprocesso =
+                subprocessoRepo
+                        .findByMapaCodigo(atividadeDto.getMapaCodigo())
+                        .orElseThrow(
+                                () ->
+                                        new ErroEntidadeNaoEncontrada(
+                                                "Subprocesso não encontrado para o mapa com código %d"
+                                                        .formatted(atividadeDto.getMapaCodigo())));
+
+        var usuario =
+                usuarioRepo
+                        .findById(tituloUsuario)
+                        .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Usuário", tituloUsuario));
+
+        // Validação defensiva: garante que apenas o titular da unidade pode criar atividades.
+        // Apesar da segurança estar configurada, mantemos esta verificação como proteção extra.
+        if (subprocesso.getUnidade() == null) {
+            throw new ErroEntidadeNaoEncontrada(
+                    "Unidade não associada ao Subprocesso %d".formatted(subprocesso.getCodigo()));
+        }
+        if (!usuario.equals(subprocesso.getUnidade().getTitular())) {
+            throw new ErroAccessoNegado(
+                    "Usuário não autorizado a criar atividades para este subprocesso.");
+        }
+
+        atualizarSituacaoSubprocessoSeNecessario(atividadeDto.getMapaCodigo());
+
+        if (subprocesso.getMapa() == null) {
+            throw new ErroEntidadeNaoEncontrada(
+                    "Mapa não associado ao subprocesso %d".formatted(subprocesso.getCodigo()));
         }
 
         var entidade = atividadeMapper.toEntity(atividadeDto);
+        entidade.setMapa(subprocesso.getMapa());
         var salvo = atividadeRepo.save(entidade);
-        return atividadeMapper.toDTO(salvo);
+
+        return atividadeMapper.toDto(salvo);
     }
 
-    public AtividadeDto atualizar(Long id, AtividadeDto atividadeDto) {
-        return atividadeRepo.findById(id)
-                .map(existente -> {
-                    var entidadeParaAtualizar = atividadeMapper.toEntity(atividadeDto);
-                    existente.setDescricao(entidadeParaAtualizar.getDescricao());
-                    existente.setMapa(entidadeParaAtualizar.getMapa());
+    /**
+     * Atualiza uma atividade existente.
+     *
+     * @param codigo O código da atividade a ser atualizada.
+     * @param atividadeDto O DTO com os novos dados da atividade.
+     * @return O {@link AtividadeDto} da atividade atualizada.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
+     */
+    public AtividadeDto atualizar(Long codigo, AtividadeDto atividadeDto) {
+        log.info("Atualizando atividade com código: {}", codigo);
+        try {
+            return atividadeRepo
+                    .findById(codigo)
+                    .map(
+                            existente -> {
+                                log.debug("Atividade encontrada: {}, mapa: {}", existente.getCodigo(),
+                                    existente.getMapa() != null ? existente.getMapa().getCodigo() : "null");
+                                if (existente.getMapa() != null) {
+                                    atualizarSituacaoSubprocessoSeNecessario(
+                                            existente.getMapa().getCodigo());
+                                }
+                                var entidadeParaAtualizar = atividadeMapper.toEntity(atividadeDto);
+                                existente.setDescricao(entidadeParaAtualizar.getDescricao());
 
-                    var atualizado = atividadeRepo.save(existente);
-                    return atividadeMapper.toDTO(atualizado);
-                })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", id));
-    }
-
-    public void excluir(Long idAtividade) {
-        atividadeRepo.findById(idAtividade).ifPresentOrElse(atividade -> {
-            var conhecimentos = conhecimentoRepo.findByAtividadeCodigo(atividade.getCodigo());
-            conhecimentoRepo.deleteAll(conhecimentos);
-            atividadeRepo.delete(atividade);
-        }, () -> {
-            throw new ErroDominioNaoEncontrado("Atividade", idAtividade);
-        });
-    }
-
-    public List<ConhecimentoDto> listarConhecimentos(Long idAtividade) {
-        if (!atividadeRepo.existsById(idAtividade)) {
-            throw new ErroDominioNaoEncontrado("Atividade", idAtividade);
+                                var atualizado = atividadeRepo.save(existente);
+                                log.info("Atividade {} atualizada com sucesso", codigo);
+                                return atividadeMapper.toDto(atualizado);
+                            })
+                    .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codigo));
+        } catch (Exception e) {
+            log.error("Erro ao atualizar atividade {}: {}", codigo, e.getMessage(), e);
+            throw e;
         }
-        return conhecimentoRepo.findByAtividadeCodigo(idAtividade)
-                .stream()
-                .map(conhecimentoMapper::toDTO)
-                .collect(Collectors.toList());
     }
 
-    public ConhecimentoDto criarConhecimento(Long idAtividade, ConhecimentoDto conhecimentoDto) {
-        return atividadeRepo.findById(idAtividade)
-                .map(atividade -> {
-                    var conhecimento = conhecimentoMapper.toEntity(conhecimentoDto);
-                    conhecimento.setAtividade(atividade);
-                    var salvo = conhecimentoRepo.save(conhecimento);
-                    return conhecimentoMapper.toDTO(salvo);
-                })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", idAtividade));
+    /**
+     * Exclui uma atividade e todos os seus conhecimentos associados.
+     *
+     * @param codAtividade O código da atividade a ser excluída.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
+     */
+    public void excluir(Long codAtividade) {
+        atividadeRepo
+                .findById(codAtividade)
+                .ifPresentOrElse(
+                        atividade -> {
+                            atualizarSituacaoSubprocessoSeNecessario(
+                                    atividade.getMapa().getCodigo());
+                            var conhecimentos =
+                                    conhecimentoRepo.findByAtividadeCodigo(atividade.getCodigo());
+                            conhecimentoRepo.deleteAll(conhecimentos);
+                            atividadeRepo.delete(atividade);
+                        },
+                        () -> {
+                            throw new ErroEntidadeNaoEncontrada("Atividade", codAtividade);
+                        });
     }
 
-    public ConhecimentoDto atualizarConhecimento(Long idAtividade, Long idConhecimento, ConhecimentoDto conhecimentoDto) {
-        return conhecimentoRepo.findById(idConhecimento)
-                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(idAtividade))
-                .map(existente -> {
-                    var paraAtualizar = conhecimentoMapper.toEntity(conhecimentoDto);
-                    existente.setDescricao(paraAtualizar.getDescricao());
-                    var atualizado = conhecimentoRepo.save(existente);
-                    return conhecimentoMapper.toDTO(atualizado);
-                })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Conhecimento", idConhecimento));
+    /**
+     * Lista todos os conhecimentos associados a uma atividade específica.
+     *
+     * @param codAtividade O código da atividade.
+     * @return Uma {@link List} de {@link ConhecimentoDto}.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
+     */
+    public List<ConhecimentoDto> listarConhecimentos(Long codAtividade) {
+        if (!atividadeRepo.existsById(codAtividade)) {
+            throw new ErroEntidadeNaoEncontrada("Atividade", codAtividade);
+        }
+        return conhecimentoRepo.findByAtividadeCodigo(codAtividade).stream()
+                .map(conhecimentoMapper::toDto)
+                .toList();
     }
 
-    public void excluirConhecimento(Long idAtividade, Long idConhecimento) {
-        conhecimentoRepo.findById(idConhecimento)
-                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(idAtividade))
-                .ifPresentOrElse(conhecimentoRepo::delete, () -> {
-                    throw new ErroDominioNaoEncontrado("Conhecimento", idConhecimento);
-                });
+    /**
+     * Cria um novo conhecimento e o associa a uma atividade existente.
+     *
+     * @param codAtividade O código da atividade à qual o conhecimento será associado.
+     * @param conhecimentoDto O DTO com os dados do novo conhecimento.
+     * @return O {@link ConhecimentoDto} do conhecimento criado.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
+     */
+    public ConhecimentoDto criarConhecimento(Long codAtividade, ConhecimentoDto conhecimentoDto) {
+        return atividadeRepo
+                .findById(codAtividade)
+                .map(
+                        atividade -> {
+                            atualizarSituacaoSubprocessoSeNecessario(
+                                    atividade.getMapa().getCodigo());
+                            var conhecimento = conhecimentoMapper.toEntity(conhecimentoDto);
+                            conhecimento.setAtividade(atividade);
+                            var salvo = conhecimentoRepo.save(conhecimento);
+                            return conhecimentoMapper.toDto(salvo);
+                        })
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codAtividade));
+    }
+
+    /**
+     * Atualiza um conhecimento existente, verificando se ele pertence à atividade especificada.
+     *
+     * @param codAtividade O código da atividade pai.
+     * @param codConhecimento O código do conhecimento a ser atualizado.
+     * @param conhecimentoDto O DTO com os novos dados do conhecimento.
+     * @return O {@link ConhecimentoDto} do conhecimento atualizado.
+     * @throws ErroEntidadeNaoEncontrada se o conhecimento não for encontrado ou não pertencer à
+     *     atividade.
+     */
+    public ConhecimentoDto atualizarConhecimento(
+            Long codAtividade, Long codConhecimento, ConhecimentoDto conhecimentoDto) {
+        return conhecimentoRepo
+                .findById(codConhecimento)
+                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(codAtividade))
+                .map(
+                        existente -> {
+                            atualizarSituacaoSubprocessoSeNecessario(
+                                    existente.getAtividade().getMapa().getCodigo());
+                            var paraAtualizar = conhecimentoMapper.toEntity(conhecimentoDto);
+                            existente.setDescricao(paraAtualizar.getDescricao());
+                            var atualizado = conhecimentoRepo.save(existente);
+                            return conhecimentoMapper.toDto(atualizado);
+                        })
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Conhecimento", codConhecimento));
+    }
+
+    /**
+     * Exclui um conhecimento, verificando se ele pertence à atividade especificada.
+     *
+     * @param codAtividade O código da atividade pai.
+     * @param codConhecimento O código do conhecimento a ser excluído.
+     * @throws ErroEntidadeNaoEncontrada se o conhecimento não for encontrado ou não pertencer à
+     *     atividade.
+     */
+    public void excluirConhecimento(Long codAtividade, Long codConhecimento) {
+        conhecimentoRepo
+                .findById(codConhecimento)
+                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(codAtividade))
+                .ifPresentOrElse(
+                        conhecimento -> {
+                            atualizarSituacaoSubprocessoSeNecessario(
+                                    conhecimento.getAtividade().getMapa().getCodigo());
+                            conhecimentoRepo.delete(conhecimento);
+                        },
+                        () -> {
+                            throw new ErroEntidadeNaoEncontrada("Conhecimento", codConhecimento);
+                        });
+    }
+
+    private void atualizarSituacaoSubprocessoSeNecessario(Long mapaCodigo) {
+        var subprocesso =
+                subprocessoRepo
+                        .findByMapaCodigo(mapaCodigo)
+                        .orElseThrow(
+                                () ->
+                                        new ErroEntidadeNaoEncontrada(
+                                                "Subprocesso não encontrado para o mapa com código %d"
+                                                        .formatted(mapaCodigo)));
+
+        if (subprocesso.getSituacao() == SituacaoSubprocesso.NAO_INICIADO) {
+            if (subprocesso.getProcesso() == null) {
+                throw new ErroEntidadeNaoEncontrada(
+                        "Processo não associado ao Subprocesso %d"
+                                .formatted(subprocesso.getCodigo()));
+            }
+            var tipoProcesso = subprocesso.getProcesso().getTipo();
+            if (tipoProcesso == TipoProcesso.MAPEAMENTO) {
+                subprocesso.setSituacao(SituacaoSubprocesso.MAPEAMENTO_CADASTRO_EM_ANDAMENTO);
+                subprocessoRepo.save(subprocesso);
+            } else if (tipoProcesso == TipoProcesso.REVISAO) {
+                subprocesso.setSituacao(SituacaoSubprocesso.REVISAO_CADASTRO_EM_ANDAMENTO);
+                subprocessoRepo.save(subprocesso);
+            }
+        }
     }
 }
